[project]
name = "gis-misc"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Strzelewicz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shapely (>=2.0.4,<3.0.0)",
    "jupyterlab (>=4.2.1,<5.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "geopandas (>=0.14.4,<0.15.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "dacite (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=3.2.2,<4.0.0)"
]
